--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>돈의 지도 - 인터랙티브 지출 분석</title>
+    <title>돈의 흐름</title>
     <style>
         * {
             margin: 0;
